# threaded-collectives

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  allreduce.cpp  batch_allreduce.cpp  reduce.cpp  thread_monte_carlo.cpp
openMP/: 1_openMp.cpp  1_openMp.out  alltest.cpp  alltest.out  local_collectives.out  monte_thread.cpp  monte_thread.out  test.out  test_allreduce.out  test_batchReduce.cpp  test_batchReduce.out  test_batchallreduce.out  test_broadcast.cpp  test_broadcast.out  test_fake.outclear  test_reduce.out  test_scatter.cpp  thread_functions.cpp
source/: CMakeLists.txt  local_collectives.cpp
tests/: thread_alltoall
